# KB_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  streamlit_app.py
app/services/: azure_auth.py  azure_health.py  config.py  consolidation_rules.py  consolidation_service.py  document_loader.py  enrichment_service.py  extraction_service.py  file_utils.py  json_utils.py  llm_client.py  metadata_store.py  normalization.py  policy_kb_store.py  prompt_utils.py  proxy_utils.py  review_service.py  similarity_service.py  status.py  verification_service.py  workflow_utils.py  yaml_utils.py
docs/: RUNBOOK.md
docs/superpowers/specs/: 2026-06-24-kb-pipeline-redesign-design.md
prompts/: policy_completeness_review.md  policy_kb_consolidation.md  policy_kb_enrichment.md  policy_rule_extraction.md
schemas/: credit_policy_rules_kb.schema.json  extracted_policy_rules.schema.json  policy_kb.schema.json  policy_review.schema.json  policy_verification.schema.json
tests/: conftest.py  test_config.py  test_consolidation_rules.py  test_e2e_smoke.py  test_file_and_document_utils.py  test_robustness.py  test_services.py  test_streamlit_entrypoint.py  test_utils.py
tests/fixtures/: expected_consolidated_shape.json  sample_extracted_rule.json  sample_policy_alpha.txt  sample_policy_beta.txt  sample_review.json
