[project]
name = "credit-policy-knowledge-base"
version = "0.1.0"
description = "Portable Streamlit workbench for creating a credit policy rules knowledge base."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "azure-ai-documentintelligence>=1.0.2",
  "azure-identity>=1.19.0",
  "jsonschema>=4.23.0",
  "langchain-openai>=0.3.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.2",
  "pyyaml>=6.0",
  "streamlit>=1.40.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "T201", "UP", "W"]
# PLC0415: lazy/optional imports (Azure, langchain, jsonschema, pyyaml) are deliberate so the app
#          imports cleanly offline and pulls optional dependencies only when actually used.
# PLR2004: the recurring "at least two" (< 2) guards are self-documenting.
ignore = ["PLC0415", "PLR2004"]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.per-file-ignores]
# The sys.path shim must run before the app package imports so Streamlit launches from any cwd.
"app/streamlit_app.py" = ["E402"]
